app/assets/stylesheets/users/dashboard.css
#box_content {
  background: none;
  position: relative;
  left: 0px;
  top: 30px;
  width: 50%;
}

#left_content {
  position: relative;
  top: 50px;
  left: 20px;
  margin-right: 20px;
  padding: 20px 20px 10px 20px;
  background: rgba(0, 255, 214, 0.28);
  border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
}

.dashBoardContainer h3.span10 {
  padding-top: 10px;
}

.shortBio {
  color: white;
  display: block;
  font-size: 20px;
  font-family: 'Oregano';
  line-height: 25px;
}

.requestLabel {
  margin: 40px 0 10px 20px;
  font-family: 'Oregano' cursive;
}
ul.requestList {
  height: 170px;
  margin: 10px 0 0px 35px;
  width: 100%;
  list-style: none;
  position: relative;
}
.requestList li {
  list-style: none;
  padding-right: 30px;
  float: left;
  width: 100px;
  display: inline;
  margin-top: 15px;
}

.dashBoardContainer {
  width: 100%;
}

.requestContainer {
  background: #191814;
  border-radius: 10px;
  -moz-border-radius: 10px;
  box-shadow: 10px 10px 10px rgba(0,0,0,0.4);
  -moz-box-shadow: 10px 10px 10px rgba(0,0,0,0.4);
  color: white;
  margin-left: 10px;
  width: 99%;
  overflow-x: scroll;
  overflow-y: hidden;
}
.profileImage {
  float: left;
}
.profileActions {
  padding-top: 12px;
}

.profileIntro {
  border: 1px solid #00F5FF;
  background: lightBlue;
  border-radius: 5px;
  overflow: hidden;
}
.profileSideNav {
  background-color: rgba(251, 180, 80, 0.66);
  width: 15%;
  float: left;
  height: 100%;
  margin-left: 54px;
}
.span4 {
  width: 245px;
}
.span2 {
  width: 100px;
}

.group {
  border-bottom: 2px solid #00F5FF;
  border-radius: 5px;
  padding-left: 10px;
  margin-top: 2%;
  padding-bottom: 2%
}
.sideNavButtons {
  text-align: center;
}

.vpThumb {
  float: left;
  padding: 20px 0 0 40px;
}

.viewerPane {
  border-radius: 10px;
  -moz-border-radius: 10px;
  box-shadow: 10px 10px 10px rgba(0,0,0,0.4);
  -moz-box-shadow: 10px 10px 10px rgba(0,0,0,0.4);
  margin-left: 10px;
  padding: 10px;
}

.viewerPane span {
  display: block;
}
.viewerPane span.label {
  font-size: 14px;
  margin: 10px 0 5px 0;
  width: 100px;
}
.vpInfo {
  padding: 10px 20px 40px 310px;
  font-size: 14px;
  line-height: 1.5;
}

.viewerPane .buttons {
  padding: 0 20px 20px;
}
.viewerPane .buttons input {
  margin-right: 15px;
}

.viewerPane ul.user-container {
  left: 170px;
  top: 30px;
}
.span4 {
  width: 170px;
}
.span2 {
  width: 120px;
  margin-left: 50px;
}


ul.mainNav {
  clear: both;
  content: "";
  display: table;
  margin-bottom: 40px;
  position: relative;
  list-style-type: none;
  padding: 0;
  left: -10px;
  top: 22px;
  height: 40px;
  line-height: 45px;
  z-index: 200;
}

.mainNav li.active {
  background: #AC4311;
}

.mainNav li {
  position: relative;
  float: left;
  width: 160px;
  margin-right: 10px;
  border-radius: 5px;
}

ul.mainNav li a {
  padding: 8px;
  color: white;
  font-family: 'Oregano';
  font-size: 16px;
  font-weight: 700;
  line-height: 45px;
  text-decoration: none;
}

.mainNav li.active a {
  pointer-events: none;
}

/* currently unused */
.dashboardHeading {
  font-family: Georgia;
  font-style: italic;
  font-weight: 500;
  font-size: 18px;
  word-spacing: 2px;
}

